--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,8 +1,11 @@
 ---
-- name: registering the result of that command `hostname` as a variable. 
-  command: hostname
-  register: hostname
+# Adapt to different download methods.
+- debug:
+    msg: "{{ package.remote_src }}"
 
-- name: Display the HOSTNAME.
-  debug:
-    msg: "HOSTNAME: {{ hostname.stdout }}"
+- name: Set fact for download method.
+  set_fact:
+    down_method: "get_url"
+  when: package.remote_src is match("http[s]?://")
+
+- include_tasks: "use_{{ down_method | default('synchronize') }}.yml"
